# spoof-check

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  data.json  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml  test.yml  typecheck.yml
docker/: Dockerfile  Dockerfile.cuda
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6_config_py.html  z_145eef247bfb46b6_utils_py.html  z_30cab77be7adbc5a_gradio_app_py.html  z_67f6f9a13eff1831_audio_py.html  z_7741cb67fb9d86e4___init___py.html  z_7741cb67fb9d86e4_client_py.html  z_7741cb67fb9d86e4_schema_py.html  z_f0e24b7f04f99860_base_client_py.html
src/: config.py  log_config.py  logging.py  main.py  utils.py
src/api/: base_client.py
src/api/anti_spoofing/: __init__.py  client.py  schema.py
src/core/: inference.py  model.py
src/services/: audio.py
src/web/: gradio_app.py
tests/: conftest.py  test_aggregation.py  test_client.py  test_utils.py
