[project]
name = "spoof-check"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.11.0",
    "pydantic-settings>=2.13.1",
    "soundfile>=0.13.1",
    "structlog>=25.5.0",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchcodec>=0.11.0",
    "transformers>=5.5.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]

[tool.ruff]
line-length = 100
target-version = "py312"

exclude = [
    ".venv",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
