[project]
name = "spoof-check"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.11.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
    "soundfile>=0.13.1",
    "structlog>=25.5.0",
    "torch==2.7.0",
    "torchaudio==2.7.0",
    "torchcodec>=0.11.0",
    "transformers>=5.5.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.9",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "SIM", "TCH", "RUF"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
